split logic from gb-server

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>gb-server</title>
+    <title>gb-server-web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
 </head>
